[package]
name = "rustalpha"
version = "0.1.0"
authors = ["Archieeeeee <longkas@gmail.com>"]
edition = "2018"
include = [
    "/examples",
    "tokiotest.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = {git ="https://github.com/cloudflare/quiche", version ="0.9.0"}
clap = "3.0.0-beta.2"
rand = "0.8.3"
#url = "2.2.2"
url = "1"
tokio = { version = "1", features = ["full"] }
quinn = {git ="https://github.com/quinn-rs/quinn"}

[http]
debug = false               # HTTP debugging
proxy = "127.0.0.1:8888"         # HTTP proxy in libcurl format

[[bin]]
name = "learnaa"
path = "src/learnaa.rs"

[[bin]]
name = "tokiotest"
path = "src/tokiotest.rs"

[[bin]]
name = "quicclient"
path = "src/quic_client.rs"

[[bin]]
name = "quicserver"
path = "src/quic_server.rs"

[[example]]
name = "arr"
path = "src/examples/arr.rs"
